# TimerApp

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
include/: Timer.h  TimerWindow.h
src/: Timer.cpp  TimerWindow.cpp
style/: style.qss
test/: main_test.cpp  test_timer.cpp  test_timer.h  test_timerwindow.cpp  test_timerwindow.h
